--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -39,8 +39,7 @@
                 </p>
                 <p class="text-2xl/7.5 pl-4" #NeutralZone>
                     <span class="font-bold">Нейтральная зона</span>
-                    — полоса территории шириной с запада на восток 1 тыс. блоков и с севера на юг 6 тыс. Блоков, имеющая
-                    центр в нулевых координатах, где находятся
+                    — территория, обозначенная на карте в канале discord, где находятся
                     <span
                         class="text-blue-400 font-semibold border-dashed border-b cursor-pointer hover:text-blue-600 transition-all duration-100"
                         (click)="scrollToElement(Empire)"
@@ -160,7 +159,8 @@
                 <p class="text-2xl/7.5 pl-4" #Diplomacy>
                     <span class="font-bold">Политический курс</span>
                     — это выбранное селением стратегическое направление его ролевой деятельности, которое должно явно
-                    отражать данную деятельность. Возможно допустимыми вариантами курсов являются:
+                    отражать данную деятельность. Политический курс не распространяется на борьбу за ключевые точки.
+                    Возможно допустимыми вариантами курсов являются:
                     <br />
                     &nbsp;&nbsp;• мирный — допускает исключительно оборону своего селения и накладывает полный запрет на
                     проведение или поддержку иных агрессивных, военных или воровских действий, даже в рамках любых
@@ -306,23 +306,12 @@
                     >
                         селении
                     </span>
-                    и участвующие в боевых действиях от него игроки обязаны быть в списке жителей этого селения.
+                    и участвующие в боевых действиях от него игроки обязаны быть в списке жителей этого селения. Не
+                    распространяется на борьбу за ключевые точки.
                 </p>
                 <p class="text-2xl/7.5 pl-4">
                     <span class="font-bold">1.15</span>
-                    Запрещено использовать приваты типа Claim за исключением преимуществ данными привилегией - титулом.
-                    <br />
-                    Для хуторов разрешается приватить исключительно дом игрока с титулом. Для всех
-                    <span
-                        class="text-blue-400 font-semibold border-dashed border-b cursor-pointer hover:text-blue-600 transition-all duration-100"
-                        (click)="isTerminology = true; scrollToElement(Settlement)"
-                    >
-                        селений
-                    </span>
-                    уровнями выше, разрешен приват исключительно до 8-ми одиночных сундуков. Приватить иное или в
-                    большем количестве - запрещается. Если игрок не состоит ни в одном селении, он имеет право
-                    заприватить себе всю доступную для привата территорию, но не имеет права хранить там ресурсы с
-                    других селений и других игроков.
+                    Запрещено использовать приваты типа Claim.
                 </p>
             </div>
         </tui-expand>
@@ -1456,8 +1445,8 @@
                                             • Поддержание экономики сервера в действующем состоянии.
                                         </p>
                                         <p class="text-2xl/7.5 pl-24">
-                                            • Справедливое распределение очков благосклонности Императора среди
-                                            подданных селений по средством голосования всех селений.
+                                            • Справедливое распределение дотаций полученных за очки (БИ) среди подданных
+                                            селений по средством голосования всех селений.
                                         </p>
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Преимущества:</p>
                                         <p class="text-2xl/7.5 pl-24">
@@ -1546,11 +1535,24 @@
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary" #Defend2>
                                 <b>Уровень 2</b>
-                                — каменные стены, не превышающие высоту 9-ти блоков и окружающие все селение или его
-                                часть. Составное оборонительное строение: каменная башня, либо форт, либо донжон, замок
-                                и т.п. возможные как хранилище главных ресурсов и жилье правителя, высотой не более
-                                29-ти блоков не считая кровлю, площадью не более 29х29 блоков. С предусмотренной
-                                возможностью для будущего расширения.
+                                <br />
+                                <span class="pl-8">
+                                    <b>Вариант 1</b>
+                                    — каменные стены, не превышающие высоту 9-ти блоков и окружающие все селение или его
+                                    часть. Составное оборонительное строение: каменная башня, либо форт, либо донжон,
+                                    замок и т.п. возможные как хранилище главных ресурсов и жилье правителя, высотой не
+                                    более 29-ти блоков не считая кровлю, площадью не более 29х29 блоков. С
+                                    предусмотренной возможностью для будущего расширения.
+                                </span>
+                                <br />
+                                <span class="pl-8">
+                                    <b>Вариант 2</b>
+                                    — использование горной фортификации, по средством обустройства её фронтальной
+                                    рукотворной части, которая не должна быть менее чем 20х20 блоков по площади с явным
+                                    входом в нее. Обустройство горы допустимо с любого этапа, однако не должно включать
+                                    в себя до достижения 2-го уровня обороны хранение ресурсов внутри горы и установку
+                                    дверей/ворот.
+                                </span>
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary" #Defend3>
                                 <b>Уровень 3</b>
@@ -1974,6 +1976,11 @@
                                 если наступило время запрета, за исключением согласования о продолжении набега со
                                 стороной противника.
                             </p>
+                            <p class="text-2xl/7.5 pl-16 text-lh-primary">
+                                <span class="font-bold">5.1.8</span>
+                                «Набег» на одно и то же селение разрешено производить не чаще чем 1 раз в 4 реальных
+                                часа.
+                            </p>
                         </div>
 
                         <div class="flex flex-col gap-3">
@@ -2114,6 +2121,12 @@
                                 допускается его наличие в сундуке на парусной лодке на таком же расстоянии до места
                                 пролома [парусную лодку двигать нельзя].
                             </p>
+                            <p class="text-2xl/7.5 pl-24 text-lh-primary">
+                                <span class="font-bold">•</span>
+                                При атакой требушетом горной фортификации, допускается совершать пролом в фронтальной
+                                рукотворной части горы размером 4х4 по площади и глубиной от 1-го до 40-а блоков, при
+                                учете, что пробивается только первая стена горы.
+                            </p>
                             <p class="text-2xl/7.5 pl-20 text-lh-primary">
                                 <span class="font-bold">•</span>
                                 Установленных защитниками баррикад и насыпей в виде песка и гравия.
@@ -2236,7 +2249,9 @@
                         </p>
                         <p class="text-2xl/7.5 pl-16">
                             <b>5.3.3</b>
-                            Улучшение и стройка на точках происходит исключительно Имперскими мастерами.
+                            Улучшение и стройка на точках происходит исключительно Имперскими мастерами, за исключение
+                            декоративной составляющей, укрепления существующих дверей/ворот и установки-восстановления
+                            дверей/ворот в том же объеме в котором они были до набега на точку.
                         </p>
                         <p class="text-2xl/7.5 pl-16">
                             <b>5.3.4</b>
@@ -2281,24 +2296,41 @@
                                 сюзерена
                             </span>
                             которая выполняла набег объявляется кулдаун на его повторное проведение на эту конкретную
-                            точку в 4 реальных часа.
+                            точку в 6 реальных часа.
                         </p>
                         <p class="text-2xl/7.5 pl-16">
                             <b>5.3.7</b>
+                            Для захвата нейтральной ключевой точки - так же необходимо объявить набег. В данном случае
+                            обе стороны, могут объявить набег одновременно, в таком случае точку захватит тот, кто
+                            первый полностью доломает монумент точки и предоставит доказательства этого.
+                        </p>
+                        <p class="text-2xl/7.5 pl-16">
+                            <b>5.3.8</b>
                             При потере точки стороной и обратном ее захвате, уровень точки понижается на 1 ступень от
                             предыдущего уровня, до которого эта сторона ее улучшила.
                         </p>
                         <p class="text-2xl/7.5 pl-16">
-                            <b>5.3.8</b>
+                            <b>5.3.9</b>
                             После захвата точки, захватившие обязаны написать тикет-запрос на адаптацию точки под них и
                             соблюдать правило неприкосновенности любых блоков и объектов на точке до получения
                             разрешения от Администрации.
                         </p>
                         <p class="text-2xl/7.5 pl-16">
-                            <b>5.3.9</b>
+                            <b>5.3.10</b>
                             Сюзерен может отказаться от контролируемой им точки и оставить ее. Для этого необходимо
                             написать тикет в дискорд и заявление в дипломатии. После чего точка будет сброшена к
                             изначальному состоянию и считаться ничьей.
+                        </p>
+                        <p class="text-2xl/7.5 pl-16">
+                            <b>5.3.11</b>
+                            Начисление очков Благосклонности Императора (БИ) происходит с момента подтверждения
+                            администратором контроля стороной точки. Суммы начислений равны 2 очка за 1 реальный час с
+                            округлением в меньшую сторону.
+                        </p>
+                        <p class="text-2xl/7.5 pl-16">
+                            <b>5.3.12</b>
+                            Улучшение точек происходит путем написания тикет-запроса с указанием уровня повышения и
+                            тратой очков БИ на это.
                         </p>
                     </div>
                 </tui-expand>
