--- a/last-hearth-landing/src/app/settlements/settlement/settlement.component.html
+++ b/last-hearth-landing/src/app/settlements/settlement/settlement.component.html
@@ -1,35 +1,60 @@
 @let settlement = settlementInfo$ | async;
 @let invitations = invitations$ | async;
+@let status = requestStatus$ | async;
 
 @if (settlement === null) {
     <tui-loader />
 } @else {
-    <div class="flex flex-col gap-8">
-        <p class="text-3xl lg:text-4xl font-bold">Ваше селение</p>
-        @if (invitations?.length) {
-            @for (item of invitations; track $index) {
-                <div class="self-center flex flex-col gap-3 items-center">
-                    <p class="text-3xl font-semibold">
-                        Вас приглашают вступить в селение
-                        <span class="font-bold">{{ getSettlementName$(item.settlement_id) | async }}</span>
-                    </p>
-                    <div class="flex gap-3">
-                        <button
-                            (click)="inviteAccept(item.id)"
-                            class="text-white transition-all duration-300 font-semibold text-base cursor-pointer bg-[rgb(148,90,50)] hover:bg-[#ff7920] rounded-2xl py-1.5 px-3"
-                        >
-                            Вступить
-                        </button>
-                        <button
-                            (click)="rejectAccept(item.id)"
-                            class="text-white transition-all duration-300 font-semibold text-base cursor-pointer bg-[rgb(148,90,50)] hover:bg-[#ff7920] rounded-2xl py-1.5 px-3"
-                        >
-                            Отклонить
-                        </button>
-                    </div>
+    @if (invitations?.length && settlement === undefined) {
+        @for (item of invitations; track $index) {
+            <div class="self-center flex flex-col gap-3 items-center">
+                <p class="text-3xl font-semibold">
+                    Вас приглашают вступить в селение
+                    <span class="font-bold">{{ getSettlementName$(item.settlement_id) | async }}</span>
+                </p>
+                <div class="flex gap-3">
+                    <button
+                        (click)="inviteAccept(item.id)"
+                        class="text-white transition-all duration-300 font-semibold text-base cursor-pointer bg-[rgb(148,90,50)] hover:bg-[#ff7920] rounded-2xl py-1.5 px-3"
+                    >
+                        Вступить
+                    </button>
+                    <button
+                        (click)="rejectAccept(item.id)"
+                        class="text-white transition-all duration-300 font-semibold text-base cursor-pointer bg-[rgb(148,90,50)] hover:bg-[#ff7920] rounded-2xl py-1.5 px-3"
+                    >
+                        Отклонить
+                    </button>
                 </div>
-            }
-        } @else {
+            </div>
+        }
+    }
+    @if (status?.status === "pending" && settlement === undefined) {
+        <div class="size-full flex justify-center items-center">
+            <p class="text-2xl/7.5 my-6 uppercase font-bold text-[#bdb093] self-center">
+                Ваша заявка на рассмотрении...
+            </p>
+        </div>
+    } @else if (status?.status === "rejected" && settlement === undefined) {
+        <div class="size-full text-center flex flex-col gap-4 justify-center items-center">
+            <p class="text-2xl/7.5 my-6 uppercase font-bold text-lh-danger self-center">
+                Заявка отклонена.
+                <br />
+                <br />
+                <span class="text-lh-primary">Причина: {{ status?.rejection_reason }}</span>
+            </p>
+
+            <button
+                (click)="createSettlement()"
+                class="text-white transition-all duration-300 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4 border hover:bg-[#e2d7bb] hover:text-lh-primary hover:font-bold text-base"
+            >
+                Основать
+            </button>
+        </div>
+    } @else {
+        <div class="flex flex-col gap-8">
+            <p class="text-3xl lg:text-4xl font-bold">Ваше селение</p>
+
             @if (settlement === undefined) {
                 <p class="text-2xl/7.5 my-6 uppercase font-bold text-[#bdb093] self-center">
                     Вы не владеете и не состоите в поселении...
@@ -161,6 +186,6 @@
                     </div>
                 </div>
             }
-        }
-    </div>
+        </div>
+    }
 }
