--- a/last-hearth-landing/src/app/settlements/settlement-card/settlement-card.component.html
+++ b/last-hearth-landing/src/app/settlements/settlement-card/settlement-card.component.html
@@ -54,7 +54,7 @@
             <hr class="h-px bg-neutral-200 w-full mt-2 rounded-full" />
             <div class="flex flex-wrap gap-3">
                 <div class="flex bg-lh-leader text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl">
-                    @if (leader?.isOnline === true) {
+                    @if (leader?.is_online === true) {
                         <tui-pulse class="self-center mr-2.5 online" />
                     } @else {
                         <tui-pulse [playing]="false" class="self-center mr-2.5 offline" />
@@ -68,7 +68,7 @@
                     <div
                         class="flex bg-lh-accent-3 text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl"
                     >
-                        @if (item?.isOnline === true) {
+                        @if (item?.is_online === true) {
                             <tui-pulse class="self-center mr-2.5 online" />
                         } @else {
                             <tui-pulse [playing]="false" class="self-center mr-2.5 offline" />
