--- a/last-hearth-landing/src/app/settlements/settlement/settlement.component.html
+++ b/last-hearth-landing/src/app/settlements/settlement/settlement.component.html
@@ -122,7 +122,7 @@
                         <div
                             class="flex bg-lh-leader text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl"
                         >
-                            @if (leader?.isOnline === true) {
+                            @if (leader?.is_online === true) {
                                 <tui-pulse class="self-center mr-2.5 online" />
                             } @else {
                                 <tui-pulse [playing]="false" class="self-center mr-2.5 offline" />
@@ -139,7 +139,7 @@
                                     [class.rounded-2xl]="userId !== settlement.leader.user_id"
                                     class="flex bg-lh-accent-3 text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5"
                                 >
-                                    @if (item?.isOnline === true) {
+                                    @if (item?.is_online === true) {
                                         <tui-pulse class="self-center mr-2.5 online" />
                                     } @else {
                                         <tui-pulse [playing]="false" class="self-center mr-2.5 offline" />
