LH | fix: market - исправление поинтера и картинок в привилегии маркиз

--- a/last-hearth-landing/src/market/templates/privilege-carousel-template/privilege-carousel-template.component.html
+++ b/last-hearth-landing/src/market/templates/privilege-carousel-template/privilege-carousel-template.component.html
@@ -9,7 +9,7 @@
             </div>
         }
     </tui-carousel>
-    <button (click)="navigate(1)" class="cыursor-pointer text-white bg-lh-primary p-2 rounded-2xl hidden sm:block">
+    <button (click)="navigate(1)" class="cursor-pointer text-white bg-lh-primary p-2 rounded-2xl hidden sm:block">
         <tui-icon icon="@tui.chevron-right" />
     </button>
 </div>
