LH | feat: добавлен функционал кнопке "подробнее" в карточках селений

--- a/last-hearth-landing/src/app/settlements/settlement-card/settlement-card.component.html
+++ b/last-hearth-landing/src/app/settlements/settlement-card/settlement-card.component.html
@@ -81,6 +81,7 @@
             </div>
 
             <button
+                (click)="openDetails()"
                 class="text-neutral-200 border-neutral-200 hover:border-white mt-6 transition-all self-end duration-300 tracking-wider border-b border-dashed font-bold cursor-pointer hover:text-white bg-transparent py-0.5"
             >
                 Подробнее
