LH | fix: исправлены п.2 правил (границы, требования по грядкам)

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -393,7 +393,7 @@
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Требования:</p>
                                         <p class="text-2xl/7.5 pl-24">• Наличие территориального блока.</p>
                                         <p class="text-2xl/7.5 pl-24">
-                                            • Расположение: не далее чем 6.5 тыс. блоков от нулевой координаты.
+                                            • Расположение: не далее чем 10 тыс. блоков от нулевой координаты.
                                         </p>
                                         <p class="text-2xl/7.5 pl-24">• Население: 1-2 человека.</p>
                                         <p class="text-2xl/7.5 pl-24">• Оборонительные постройки: отсутствуют.</p>
@@ -471,7 +471,7 @@
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Требования:</p>
                                         <p class="text-2xl/7.5 pl-24">• Наличие территориального блока.</p>
                                         <p class="text-2xl/7.5 pl-24">
-                                            • Расположение: не далее 5 тыс. блоков от нулевой координаты.
+                                            • Расположение: не далее 8.5 тыс. блоков от нулевой координаты.
                                         </p>
                                         <p class="text-2xl/7.5 pl-24">• Население: от 3-х человек.</p>
                                         <p class="text-2xl/7.5 pl-24">
@@ -595,7 +595,7 @@
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Требования:</p>
                                         <p class="text-2xl/7.5 pl-24">• Наличие территориального блока.</p>
                                         <p class="text-2xl/7.5 pl-24">
-                                            • Расположение: не далее 5 тыс. блоков от нулевой координаты.
+                                            • Расположение: не далее 8.5 тыс. блоков от нулевой координаты.
                                         </p>
                                         <p class="text-2xl/7.5 pl-24">• Население: от 4-х человек.</p>
                                         <p class="text-2xl/7.5 pl-24">
@@ -784,7 +784,7 @@
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Требования:</p>
                                         <p class="text-2xl/7.5 pl-24">• Наличие территориального блока.</p>
                                         <p class="text-2xl/7.5 pl-24">
-                                            • Расположение: не далее 5 тыс. блоков от нулевой координаты.
+                                            • Расположение: не далее 8.5 тыс. блоков от нулевой координаты.
                                         </p>
                                         <p class="text-2xl/7.5 pl-24">• Население: от 5-ти человек.</p>
                                         <p class="text-2xl/7.5 pl-24">
@@ -992,7 +992,7 @@
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Требования:</p>
                                         <p class="text-2xl/7.5 pl-24">• Наличие территориального блока.</p>
                                         <p class="text-2xl/7.5 pl-24">
-                                            • Расположение: не далее 5 тыс. блоков от нулевой координаты.
+                                            • Расположение: не далее 8.5 тыс. блоков от нулевой координаты.
                                         </p>
                                         <p class="text-2xl/7.5 pl-24">• Население: от 6-ти человек.</p>
                                         <p class="text-2xl/7.5 pl-24">
@@ -1070,10 +1070,7 @@
                                             <br />
                                             <span class="text-2xl/7.5 pl-12">◦ амбар;</span>
                                             <br />
-                                            <span class="text-2xl/7.5 pl-12">
-                                                ◦ грядки площадью до 64-ти блоков или загон с не более чем 12-ю
-                                                животными.
-                                            </span>
+                                            <span class="text-2xl/7.5 pl-12">◦ грядки площадью от 48-ми блоков.</span>
                                         </p>
                                         <p class="text-2xl/7.5 pl-24">
                                             • Дополнительные строения:
@@ -1206,7 +1203,7 @@
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Требования:</p>
                                         <p class="text-2xl/7.5 pl-24">• Наличие территориального блока.</p>
                                         <p class="text-2xl/7.5 pl-24">
-                                            • Расположение: не далее 5 тыс. блоков от нулевой координаты.
+                                            • Расположение: не далее 8.5 тыс. блоков от нулевой координаты.
                                         </p>
                                         <p class="text-2xl/7.5 pl-24">• Население: от 8-ми человек.</p>
                                         <p class="text-2xl/7.5 pl-24">
@@ -1275,10 +1272,7 @@
                                             <br />
                                             <span class="text-2xl/7.5 pl-12">◦ амбар;</span>
                                             <br />
-                                            <span class="text-2xl/7.5 pl-12">
-                                                ◦ грядки площадью до 48-и блоков или загон с не более чем 10-ю
-                                                животными.
-                                            </span>
+                                            <span class="text-2xl/7.5 pl-12">◦ грядки площадью от 64-х блоков.</span>
                                         </p>
                                         <p class="text-2xl/7.5 pl-24">
                                             • Дополнительные строения:
