LH | fix: правки по правилам + очки

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -2280,6 +2280,11 @@
                             <b>5.3.6</b>
                             Боевые действия за точки, происходят идентично набегу, за исключением:
                         </p>
+                        <p class="text-2xl/7.5 pl-20">
+                            • При объявлении набега любым селением со стороны Сюзерена он начинается для всей стороны.
+                            То есть участвовать в набеге может каждое селение от стороны. Для защиты распространяется
+                            тоже самое правило.
+                        </p>
                         <p class="text-2xl/7.5 pl-20">• Для захвата точки необходимо разрушить монумент точки.</p>
                         <p class="text-2xl/7.5 pl-20">
                             • После совершенного набега (удачный или не удачный) на всю сторону
@@ -2289,8 +2294,8 @@
                             >
                                 сюзерена
                             </span>
-                            которая выполняла набег объявляется кулдаун на его повторное проведение на эту конкретную
-                            точку в 6 реальных часа.
+                            которая выполняла набег и на сторону противоположную объявляется кулдаун на его повторное
+                            проведение на эту конкретную точку в 6 реальных часов.
                         </p>
                         <p class="text-2xl/7.5 pl-16">
                             <b>5.3.7</b>
