LH | fix: Добавлена информация о диаметре территориального блока в типы селений

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -391,7 +391,9 @@
                                             анкеты.
                                         </p>
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Требования:</p>
-                                        <p class="text-2xl/7.5 pl-24">• Наличие территориального блока.</p>
+                                        <p class="text-2xl/7.5 pl-24">
+                                            • Наличие территориального блока [диаметр = 32 блока].
+                                        </p>
                                         <p class="text-2xl/7.5 pl-24">
                                             • Расположение: не далее чем 10 тыс. блоков от нулевой координаты.
                                         </p>
@@ -469,7 +471,9 @@
                                             основные постройки на поверхности и соответствующее следующим требованиям:
                                         </p>
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Требования:</p>
-                                        <p class="text-2xl/7.5 pl-24">• Наличие территориального блока.</p>
+                                        <p class="text-2xl/7.5 pl-24">
+                                            • Наличие территориального блока [диаметр = 64 блока].
+                                        </p>
                                         <p class="text-2xl/7.5 pl-24">
                                             • Расположение: не далее 8.5 тыс. блоков от нулевой координаты.
                                         </p>
@@ -593,7 +597,9 @@
                                             соответствующее следующим требованиям:
                                         </p>
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Требования:</p>
-                                        <p class="text-2xl/7.5 pl-24">• Наличие территориального блока.</p>
+                                        <p class="text-2xl/7.5 pl-24">
+                                            • Наличие территориального блока [диаметр = 128 блоков].
+                                        </p>
                                         <p class="text-2xl/7.5 pl-24">
                                             • Расположение: не далее 8.5 тыс. блоков от нулевой координаты.
                                         </p>
@@ -782,7 +788,9 @@
                                             соответствующее следующим требованиям:
                                         </p>
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Требования:</p>
-                                        <p class="text-2xl/7.5 pl-24">• Наличие территориального блока.</p>
+                                        <p class="text-2xl/7.5 pl-24">
+                                            • Наличие территориального блока [диаметр = 164 блока].
+                                        </p>
                                         <p class="text-2xl/7.5 pl-24">
                                             • Расположение: не далее 8.5 тыс. блоков от нулевой координаты.
                                         </p>
@@ -990,7 +998,9 @@
                                             соответствующее следующим требованиям:
                                         </p>
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Требования:</p>
-                                        <p class="text-2xl/7.5 pl-24">• Наличие территориального блока.</p>
+                                        <p class="text-2xl/7.5 pl-24">
+                                            • Наличие территориального блока [диаметр = 256 блоков].
+                                        </p>
                                         <p class="text-2xl/7.5 pl-24">
                                             • Расположение: не далее 8.5 тыс. блоков от нулевой координаты.
                                         </p>
@@ -1201,7 +1211,9 @@
                                             соответствующее следующим требованиям:
                                         </p>
                                         <p class="text-2xl/7.5 pl-20 text-lh-primary font-bold">Требования:</p>
-                                        <p class="text-2xl/7.5 pl-24">• Наличие территориального блока.</p>
+                                        <p class="text-2xl/7.5 pl-24">
+                                            • Наличие территориального блока [диаметр = 512 блоков].
+                                        </p>
                                         <p class="text-2xl/7.5 pl-24">
                                             • Расположение: не далее 8.5 тыс. блоков от нулевой координаты.
                                         </p>
