--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -1987,6 +1987,11 @@
                                 «Набег» на одно и то же селение разрешено производить не чаще чем 1 раз в 4 реальных
                                 часа.
                             </p>
+                            <p class="text-2xl/7.5 pl-16 text-lh-primary">
+                                <span class="font-bold">5.1.9</span>
+                                Обеим сторонам категорически запрещено ломать блоки под трупами, закапывать или
+                                застраивать их.
+                            </p>
                         </div>
 
                         <div class="flex flex-col gap-3">
@@ -1994,12 +1999,12 @@
                                 Правила ведения боевых действий во время состояния «набег» для стороны защищающихся
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.8</span>
+                                <span class="font-bold">5.1.10</span>
                                 После объявления «набега», запрещается выход из игры с целью сохранить и спрятать
                                 ресурсы внутри инвентаря игрока.
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.9</span>
+                                <span class="font-bold">5.1.11</span>
                                 Запрещается ставить любые блоки и объекты позволяющие создать преимущество во время
                                 набега, за исключением:
                             </p>
@@ -2014,16 +2019,16 @@
                                 подготовленных точек.
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.10</span>
+                                <span class="font-bold">5.1.12</span>
                                 Запрещается деспавн ресурсов.
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.11</span>
+                                <span class="font-bold">5.1.13</span>
                                 Запрещается укреплять любые баррикады установленные во время набега более чем на 50
                                 единиц прочности.
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.12</span>
+                                <span class="font-bold">5.1.14</span>
                                 За набег разрешается установка не более чем трех полос баррикад.
                             </p>
 
@@ -2032,7 +2037,7 @@
                             </p>
 
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.13</span>
+                                <span class="font-bold">5.1.15</span>
                                 Атакующие обязаны перед нападением соорудить небольшой лагерь [оборона которого, должна
                                 так же проходить по
                                 <span
@@ -2044,31 +2049,31 @@
                                 ], не более 10х10х12 блоков.
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.14</span>
+                                <span class="font-bold">5.1.16</span>
                                 Лагерь обязан быть расположен не ближе чем в 100 блоках от территории противника. Если
                                 возможности установить лагерь нет [море], атакующим разрешается разбить свой лагерь
                                 сразу же на побережье, либо на созданной песчаной насыпи.
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.15</span>
+                                <span class="font-bold">5.1.17</span>
                                 Лагерем не может выступать селение.
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.16</span>
+                                <span class="font-bold">5.1.18</span>
                                 Атакующие обязаны установить в лагере монумент 1x1x2 [ш, д, в].
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.17</span>
+                                <span class="font-bold">5.1.19</span>
                                 Атакующие обязаны использовать темпоральные шестеренки исключительно внутри своего
                                 лагеря.
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.18</span>
+                                <span class="font-bold">5.1.20</span>
                                 Атакующие обязаны признать поражение и прекратить набег, как только будет полностью
                                 разрушен монумент в лагере.
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.19</span>
+                                <span class="font-bold">5.1.21</span>
                                 Атакующим запрещается установка любых блоков во время нападения, за исключением:
                             </p>
                             <p class="text-2xl/7.5 pl-20 text-lh-primary">
@@ -2094,15 +2099,15 @@
                                 Сундуков и сосудов.
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.20</span>
+                                <span class="font-bold">5.1.22</span>
                                 Атакующим запрещено использование планера.
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.21</span>
+                                <span class="font-bold">5.1.23</span>
                                 Запрещается деспавн ресурсов.
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.22</span>
+                                <span class="font-bold">5.1.24</span>
                                 Запрещено ломать всё, кроме:
                             </p>
                             <p class="text-2xl/7.5 pl-20 text-lh-primary">
@@ -2145,7 +2150,7 @@
                                 условии возвращения саркофага на место].
                             </p>
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
-                                <span class="font-bold">5.1.23</span>
+                                <span class="font-bold">5.1.25</span>
                                 Запрещается грабить лут, который представляет из себя элементы промышленности, например:
                                 генераторы, аккумуляторы, моторы, ветряки, наковальни и прочее, если они поставлены, а
                                 не находятся внутри сосудов/сундуков/ящиков и т.п. Такой лут можно получить только во
