--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -1990,7 +1990,8 @@
                             <p class="text-2xl/7.5 pl-16 text-lh-primary">
                                 <span class="font-bold">5.1.9</span>
                                 Обеим сторонам категорически запрещено ломать блоки под трупами, закапывать или
-                                застраивать их.
+                                застраивать их за исключением прямо предусмотренных механик набега [пример: засыпание
+                                рва в котором оказался труп].
                             </p>
                         </div>
 
