LH | fix: Апдейт БИ. feat: Добавлен п.6.13 правил

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -2437,31 +2437,36 @@
                 </p>
                 <p class="pl-8">
                     <span class="font-bold">6.13</span>
+                    Предложения и спорные ситуации рассматриваются коллегией, состоящей не менее чем из 3-х
+                    администраторов. Принятое администрацией решение является неоспоримым.
+                </p>
+                <p class="pl-8">
+                    <span class="font-bold">6.14</span>
                     Порядок выбора наказания для любого администратора в случае нарушения регламента: анализ ситуации
                     административным составом; вынесение решения в виде предупреждения или отстранения от должности.
                 </p>
                 <p class="pl-8">
-                    <span class="font-bold">6.14</span>
+                    <span class="font-bold">6.15</span>
                     Ранги администраторов:
                     <br />
                     *Один человек может занимать несколько ролей.
                 </p>
                 <p class="pl-16">
-                    <span class="font-bold">6.14.1</span>
+                    <span class="font-bold">6.15.1</span>
                     Администратор - финальная инстанция, отвечает за редакцию правил, приоритет голоса для разрешения
                     игровых спорных моментов, имеет все доступы в дискорде, гм-аккаунт.
                 </p>
                 <p class="pl-16">
-                    <span class="font-bold">6.14.2</span>
+                    <span class="font-bold">6.15.2</span>
                     Тех-администратор - имеет гм-аккаунт, выполняет действия связанные с выдачей предметов, или
                     разрешением багов, имеет доступ к логам.
                 </p>
                 <p class="pl-16">
-                    <span class="font-bold">6.14.3</span>
+                    <span class="font-bold">6.15.3</span>
                     Модератор - следит за соблюдением порядка в дискорде и игровом чате.
                 </p>
                 <p class="pl-16">
-                    <span class="font-bold">6.14.4</span>
+                    <span class="font-bold">6.15.4</span>
                     Ивент-мейкер - имеет специальный гм-аккаунт, выполняет работу по созданию ивентов. Подчиняется всем
                     вышеперечисленным рангам.
                 </p>
