LH | fix: фикс отображения новостей + новая новость

--- a/last-hearth-landing/src/app/layout/footer/footer.component.html
+++ b/last-hearth-landing/src/app/layout/footer/footer.component.html
@@ -18,7 +18,7 @@
                 <span class="text-lh-primary hidden sm:block">•</span>
 
                 <a href="https://docs.lasthearth.ru/" target="_blank" class="self-start">
-                    Версия 1.2.8 beta от 26.12.2025s
+                    Версия 1.2.9 beta от 30.12.2025
                 </a>
             </div>
         </div>
