--- a/last-hearth-landing/src/app/profile/create-settlement-from/settlements-types-forms/camp-form/camp-form.component.html
+++ b/last-hearth-landing/src/app/profile/create-settlement-from/settlements-types-forms/camp-form/camp-form.component.html
@@ -47,37 +47,44 @@
         </p>
 
         <label *ngIf="!form.controls[key].value" tuiInputFiles>
+            <input accept="image/*" tuiInputFiles [formControl]="form.controls[key]" class="border-lh-primary!" />
             <ng-template tuiInputFilesContent>
                 <span class="text-gray-600">Добавить изображение...</span>
             </ng-template>
-            <input accept="image/*" tuiInputFiles [formControl]="form.controls[key]" class="border-lh-primary!" />
         </label>
 
         <tui-files class="tui-space_top-1">
-            <tui-file
-                *ngIf="form.controls[key].value | tuiFileRejected: { accept: 'image/*' } | async as file"
-                state="error"
-                [file]="file"
-                (remove)="removeFile(key)"
-            />
-            <tui-file *ngIf="fileStatus.loaded[key] | async as file" [file]="file" (remove)="removeFile(key)" />
-            <tui-file
-                *ngIf="fileStatus.failed[key] | async as file"
-                state="error"
-                [file]="file"
-                (remove)="removeFile(key)"
-            />
+            <ng-container *ngIf="form.controls[key].hasError('maxFileSize') && form.controls[key].value as file">
+                <tui-file state="error" [file]="file" (remove)="removeFile(key)"></tui-file>
+                <tui-error class="tui-space_bottom-2" [error]="'Файл слишком большой (макс. 2МБ)'"></tui-error>
+            </ng-container>
+
+            <ng-container *ngIf="form.controls[key].value | tuiFileRejected: { accept: 'image/*' } | async as file">
+                <tui-file state="error" [file]="file" (remove)="removeFile(key)"></tui-file>
+                <tui-error class="tui-space_bottom-2" [error]="'Неверный формат файла'"></tui-error>
+            </ng-container>
             <tui-file
                 *ngIf="fileStatus.loading[key] | async as file"
                 state="loading"
                 [file]="file"
                 (remove)="removeFile(key)"
             />
+            <tui-file
+                *ngIf="form.controls[key].valid && form.controls[key].value as file"
+                [file]="file"
+                (remove)="removeFile(key)"
+            ></tui-file>
         </tui-files>
     </div>
+
     <button
+        [tuiHint]="
+            form.invalid ? 'Заполните все обязательные поля формы перед отправкой.  ' : 'Форма готова к отправке.'
+        "
+        tuiHintDirection="right"
         type="submit"
-        class="text-white w-20 h-10 text-sm! self-start cursor-pointer bg-lh-primary-2 rounded-lg py-1.5 px-2.5 mt-2 disabled:text-gray-300 disabled:bg-lh-primary"
+        class="text-white w-20 h-10 text-sm! self-start cursor-pointer bg-lh-primary-2 rounded-lg py-1.5 px-2.5 mt-2 font-bold hover:text-lh-primary hover:bg-[#e2d7bb] border transition-all duration-300 disabled:text-gray-300 disabled:bg-lh-primary disabled:cursor-not-allowed"
+        [disabled]="form.invalid || isLoading"
     >
         @if (isLoading) {
             <tui-loader [showLoader]="isLoading" />
