--- a/last-hearth-landing/src/app/profile/create-settlement-from/settlements-types-forms/village-form/village-form.component.html
+++ b/last-hearth-landing/src/app/profile/create-settlement-from/settlements-types-forms/village-form/village-form.component.html
@@ -49,37 +49,43 @@
         </p>
 
         <label *ngIf="!form.controls[key].value" tuiInputFiles>
+            <input accept="image/*" tuiInputFiles [formControl]="form.controls[key]" class="border-lh-primary!" />
             <ng-template tuiInputFilesContent>
                 <span class="text-gray-600">Добавить изображение...</span>
             </ng-template>
-            <input accept="image/*" tuiInputFiles [formControl]="form.controls[key]" class="border-lh-primary!" />
         </label>
 
         <tui-files class="tui-space_top-1">
-            <tui-file
-                *ngIf="form.controls[key].value | tuiFileRejected: { accept: 'image/*' } | async as file"
-                state="error"
-                [file]="file"
-                (remove)="removeFile(key)"
-            />
-            <tui-file *ngIf="fileStatus.loaded[key] | async as file" [file]="file" (remove)="removeFile(key)" />
-            <tui-file
-                *ngIf="fileStatus.failed[key] | async as file"
-                state="error"
-                [file]="file"
-                (remove)="removeFile(key)"
-            />
             <tui-file
                 *ngIf="fileStatus.loading[key] | async as file"
                 state="loading"
                 [file]="file"
                 (remove)="removeFile(key)"
-            />
+            ></tui-file>
+
+            <ng-container *ngIf="form.get(key)?.value as file">
+                <tui-file
+                    *ngIf="form.get(key)?.invalid || (file | tuiFileRejected: { accept: 'image/*' } | async)"
+                    state="error"
+                    [file]="file"
+                    (remove)="removeFile(key)"
+                ></tui-file>
+
+                <tui-file
+                    *ngIf="form.get(key)?.valid && !(file | tuiFileRejected: { accept: 'image/*' } | async)"
+                    [file]="file"
+                    (remove)="removeFile(key)"
+                ></tui-file>
+            </ng-container>
+
+            <tui-error [formControl]="getControl(key)" [error]="[] | tuiFieldError | async"></tui-error>
         </tui-files>
     </div>
+
     <button
         type="submit"
-        class="text-white w-20 h-10 text-sm! self-start cursor-pointer bg-lh-primary-2 rounded-lg py-1.5 px-2.5 mt-2 disabled:text-gray-300 disabled:bg-lh-primary"
+        class="text-white w-20 h-10 text-sm! self-start cursor-pointer bg-lh-primary-2 rounded-lg py-1.5 px-2.5 mt-2 font-bold hover:text-lh-primary hover:bg-[#e2d7bb] border transition-all duration-300 disabled:text-gray-300 disabled:bg-lh-primary disabled:cursor-not-allowed"
+        [disabled]="form.invalid || isLoading"
     >
         @if (isLoading) {
             <tui-loader [showLoader]="isLoading" />
